--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -7,9 +7,16 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
     "@types/aws-lambda": "^8.10.129",
-    "vitest": "^0.34.6",
-    "sst": "^2.36.7"
+    "@types/node": "^20.10.0",
+    "@types/uuid": "^9.0.7",
+    "sst": "^2.36.7",
+    "vitest": "^0.34.6"
+  },
+  "dependencies": {
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1506.0",
+    "stripe": "^14.5.0",
+    "uuid": "^9.0.1"
   }
 }
